--- a/main.css
+++ b/main.css
@@ -20,6 +20,18 @@ div {
 
 }
 
+.green {
+    margin: 0 auto;
+    height: 100vh;
+    width: 50vw;
+    background-color: rgb(48, 79, 55);
+    display: block;
+
+    @media(max-width:800px) {
+        width: 100vw;
+    }
+}
+
 img {
     height: 50%;
     margin: 5% 30%;
