--- a/main.css
+++ b/main.css
@@ -7,7 +7,7 @@ body {
     background-color: #999;
 }
 
-div {
+.main {
     margin: 0 auto;
     height: 100vh;
     width: 50vw;
@@ -47,9 +47,15 @@ p {
     color: #fff
 }
 
+.btns {
+    position: relative;
+    display: flex;
+    justify-content: space-around;
+
+}
+
 button {
     margin-top: 30px;
-    margin-left: 40%;
     padding: 10px;
     background-color: rgb(51, 51, 245);
     color: rgb(236, 238, 239);
